--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,18 +18,22 @@ dependencies:
   cloud_firestore: ^0.14.3
   firebase_storage: ^4.0.1
   provider: ^4.3.2+2
-  # image_picker: ^0.6.7+12
-  # 参考：https://github.com/flutter/flutter/issues/65995
-  image_picker:
-    git:
-      url: https://github.com/cpboyd/plugins.git
-      ref: e9965bd9bfc8e401ee595dd0a9ee6f0940e9b127
-      path: packages/image_picker/image_picker
+  image_picker: ^0.6.7+14
+  google_fonts: ^1.1.1
+  path_provider: ^1.6.24
+#  # image_picker: ^0.6.7+12
+#  # 参考：https://github.com/flutter/flutter/issues/65995
+#  image_picker:
+#    git:
+#      url: https://github.com/cpboyd/plugins.git
+#      ref: e9965bd9bfc8e401ee595dd0a9ee6f0940e9b127
+#      path: packages/image_picker/image_picker
   image_cropper: ^1.3.1
   flutter_native_image: ^0.0.5+3
   cached_network_image: ^2.3.3
   simple_logger: ^1.7.0
   enum_to_string: ^1.0.9
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
