--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 {LARGE_FILE} filter=lfs diff=lfs merge=lfs -text
+.dart_tool/pub/bin/flutter_launcher_icons/main.dart-2.10.1.snapshot filter=lfs diff=lfs merge=lfs -text
+git filter=lfs diff=lfs merge=lfs -text
+add filter=lfs diff=lfs merge=lfs -text
