--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 .dart_tool/pub/bin/flutter_launcher_icons/main.dart-2.10.1.snapshot filter=lfs diff=lfs merge=lfs -text
 git filter=lfs diff=lfs merge=lfs -text
 add filter=lfs diff=lfs merge=lfs -text
+.dart_tool/flutter_build/c7d649ff71fcb06b3c1095bc564ad4c2/app.dill filter=lfs diff=lfs merge=lfs -text
